added a bunch of category stuff

--- a/ElevenNote.Models/ElevenNote.Models.csproj
+++ b/ElevenNote.Models/ElevenNote.Models.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryModels\CategoryCreate.cs" />
+    <Compile Include="CategoryModels\CategoryDelete.cs" />
+    <Compile Include="CategoryModels\CategoryEdit.cs" />
     <Compile Include="CategoryModels\CategoryListItem.cs" />
     <Compile Include="NoteModels\NoteCreate.cs" />
     <Compile Include="NoteModels\NoteDetail.cs" />
